--- a/package-cdi-ear/ear/pom.xml
+++ b/package-cdi-ear/ear/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <!--
         This pom builds the EAR artifact and includes the ejb and web modules.
@@ -11,7 +11,7 @@
     <groupId>org.jboss.arquillian.container.testsuite</groupId>
     <artifactId>package-cdi-ear-ear</artifactId>
     <packaging>ear</packaging>
-    <version>7.0.2-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
     <name>CDI EAR - EAR</name>
 
     <dependencies>
@@ -19,13 +19,13 @@
         <dependency>
             <groupId>org.jboss.arquillian.container.testsuite</groupId>
             <artifactId>package-cdi-ear-ejb</artifactId>
-            <version>7.0.2-SNAPSHOT</version>
+            <version>${project.version}</version>
             <type>ejb</type>
         </dependency>
         <dependency>
             <groupId>org.jboss.arquillian.container.testsuite</groupId>
             <artifactId>package-cdi-ear-web</artifactId>
-            <version>7.0.2-SNAPSHOT</version>
+            <version>${project.version}</version>
             <type>war</type>
         </dependency>
     </dependencies>
