--- a/package-cdi-ear/web/pom.xml
+++ b/package-cdi-ear/web/pom.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.jboss.arquillian.container.testsuite</groupId>
     <artifactId>package-cdi-ear-web</artifactId>
-    <version>7.0.2-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
     <name>CDI EAR - WEB</name>
     <packaging>war</packaging>
 
     <properties>
         <!-- Explicitly declaring the source encoding eliminates the following
-       message: -->
+            message: -->
         <!-- [WARNING] Using platform encoding (UTF-8 actually) to copy filtered
-  resources, i.e. build is platform dependent! -->
+            resources, i.e. build is platform dependent! -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -21,12 +21,12 @@
         <dependencies>
             <!-- Define the version of JBoss' Java EE 6 APIs we want to use -->
             <!-- JBoss distributes a complete set of Java EE 6 APIs including
-        a Bill of Materials (BOM). A BOM specifies the versions of a "stack" (or
-        a collection) of artifacts. We use this here so that we always get the correct
-        versions of artifacts. Here we use the jboss-javaee-6.0 stack (you can
-        read this as the JBoss stack of the Java EE 6 APIs). You can actually
-        use this stack with any version of JBoss AS that implements Java EE 6, not
-        just JBoss AS 7! -->
+                a Bill of Materials (BOM). A BOM specifies the versions of a "stack" (or
+                a collection) of artifacts. We use this here so that we always get the correct
+                versions of artifacts. Here we use the jboss-javaee-6.0 stack (you can
+                read this as the JBoss stack of the Java EE 6 APIs). You can actually
+                use this stack with any version of JBoss AS that implements Java EE 6, not
+                just JBoss AS 7! -->
             <dependency>
                 <groupId>org.jboss.spec</groupId>
                 <artifactId>jboss-javaee-6.0</artifactId>
@@ -40,7 +40,7 @@
     <dependencies>
 
         <!-- Import the CDI API, we use provided scope as the API is included
-    in JBoss AS 7 -->
+            in JBoss AS 7 -->
         <dependency>
             <groupId>javax.enterprise</groupId>
             <artifactId>cdi-api</artifactId>
@@ -48,7 +48,7 @@
         </dependency>
 
         <!-- Import the Common Annotations API (JSR-250), we use provided scope
-as the API is included in JBoss AS 7 -->
+            as the API is included in JBoss AS 7 -->
         <dependency>
             <groupId>org.jboss.spec.javax.annotation</groupId>
             <artifactId>jboss-annotations-api_1.1_spec</artifactId>
@@ -56,7 +56,7 @@ as the API is included in JBoss AS 7 -->
         </dependency>
 
         <!-- Import the Servlet API, we use provided scope as the API is included
-    in JBoss AS 7 -->
+            in JBoss AS 7 -->
         <dependency>
             <groupId>org.jboss.spec.javax.servlet</groupId>
             <artifactId>jboss-servlet-api_3.0_spec</artifactId>
@@ -66,7 +66,7 @@ as the API is included in JBoss AS 7 -->
         <dependency>
             <groupId>org.jboss.arquillian.container.testsuite</groupId>
             <artifactId>package-cdi-ear-ejb</artifactId>
-            <version>7.0.2-SNAPSHOT</version>
+            <version>${project.version}</version>
             <scope>provided</scope>
         </dependency>
 
