--- a/test-resource/pom.xml
+++ b/test-resource/pom.xml
@@ -1,18 +1,16 @@
 <?xml version="1.0"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.jboss.arquillian.container.testsuite</groupId>
     <artifactId>test-resource</artifactId>
-    <version>7.0.2-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>Resource test</name>
 
     <parent>
         <groupId>org.jboss.arquillian.container.testsuite</groupId>
         <artifactId>arquillian-container-testsuite</artifactId>
-        <version>1.0</version>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
 
     <properties>
@@ -23,7 +21,7 @@
         <dependency>
             <groupId>org.jboss.arquillian.container.testsuite</groupId>
             <artifactId>package-cdi-war</artifactId>
-            <version>7.0.2-SNAPSHOT</version>
+            <version>${project.version}</version>
             <scope>provided</scope>
             <classifier>classes</classifier>
         </dependency>
