--- a/package-cdi-ear/ear/pom.xml
+++ b/package-cdi-ear/ear/pom.xml
@@ -1,18 +1,22 @@
 <?xml version="1.0"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+
+    <parent>
+        <groupId>org.jboss.arquillian.container.testsuite</groupId>
+        <artifactId>package-cdi-ear</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+    </parent>
+
+    <artifactId>package-cdi-ear-ear</artifactId>
+    <packaging>ear</packaging>
+    <name>Arquillian Container Testsuite: CDI EAR EAR Module</name>
 
     <!--
         This pom builds the EAR artifact and includes the ejb and web modules.
     -->
 
-    <modelVersion>4.0.0</modelVersion>
-
-    <groupId>org.jboss.arquillian.container.testsuite</groupId>
-    <artifactId>package-cdi-ear-ear</artifactId>
-    <packaging>ear</packaging>
-    <version>1.0.0-SNAPSHOT</version>
-    <name>CDI EAR - EAR</name>
 
     <dependencies>
         <!-- Dependencies on the ejb and web modules so that they can be found by the ear plugin -->
@@ -40,6 +44,8 @@
                 <version>2.7</version>
                 <!-- configuring the ear plugin -->
                 <configuration>
+                    <!-- Tell Maven we are using Java EE 6 -->
+                    <version>6</version>
                     <!-- Specify the artifact name for the EAR -->
                     <finalName>test</finalName>
                     <modules>
@@ -54,14 +60,6 @@
                             <artifactId>package-cdi-ear-ejb</artifactId>
                         </ejbModule>
                     </modules>
-                </configuration>
-            </plugin>
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.1</version>
-                <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
                 </configuration>
             </plugin>
         </plugins>
