--- a/package-cdi-ear/ejb/pom.xml
+++ b/package-cdi-ear/ejb/pom.xml
@@ -3,10 +3,14 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.jboss.arquillian.container.testsuite</groupId>
+    <parent>
+        <groupId>org.jboss.arquillian.container.testsuite</groupId>
+        <artifactId>package-cdi-ear</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+    </parent>
+
     <artifactId>package-cdi-ear-ejb</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
-    <name>CDI EAR - EJB</name>
+    <name>Arquillian Container Testsuite: CDI EAR EJB Module</name>
 
     <properties>
         <!-- Explicitly declaring the source encoding eliminates the following
@@ -15,26 +19,6 @@
             resources, i.e. build is platform dependent! -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
-    <dependencyManagement>
-        <dependencies>
-            <!-- Define the version of JBoss' Java EE 6 APIs we want to use -->
-            <!-- JBoss distributes a complete set of Java EE 6 APIs including
-                a Bill of Materials (BOM). A BOM specifies the versions of a "stack" (or
-                a collection) of artifacts. We use this here so that we always get the correct
-                versions of artifacts. Here we use the jboss-javaee-6.0 stack (you can
-                read this as the JBoss stack of the Java EE 6 APIs). You can actually
-                use this stack with any version of JBoss AS that implements Java EE 6, not
-                just JBoss AS 7! -->
-            <dependency>
-                <groupId>org.jboss.spec</groupId>
-                <artifactId>jboss-javaee-6.0</artifactId>
-                <version>3.0.0.Beta1</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
 
     <dependencies>
 
