--- a/package-cdi-ear/pom.xml
+++ b/package-cdi-ear/pom.xml
@@ -6,8 +6,8 @@
     <groupId>org.jboss.arquillian.container.testsuite</groupId>
     <artifactId>package-cdi-ear</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <name>CDI EAR</name>
     <packaging>pom</packaging>
+    <name>Arquillian Container Testsuite: CDI EAR</name>
 
     <properties>
         <!-- Explicitly declaring the source encoding eliminates the following
@@ -15,12 +15,50 @@
         <!-- [WARNING] Using platform encoding (UTF-8 actually) to copy filtered
             resources, i.e. build is platform dependent! -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+        <!-- versioning -->
+        <version.org.jboss.spec.javaee6>3.0.0.Final</version.org.jboss.spec.javaee6>
     </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <!-- Define the version of JBoss' Java EE 6 APIs we want to use -->
+            <!-- JBoss distributes a complete set of Java EE 6 APIs including
+                a Bill of Materials (BOM). A BOM specifies the versions of a "stack" (or
+                a collection) of artifacts. We use this here so that we always get the correct
+                versions of artifacts. Here we use the jboss-javaee-6.0 stack (you can
+                read this as the JBoss stack of the Java EE 6 APIs). You can actually
+                use this stack with any version of JBoss AS that implements Java EE 6, not
+                just JBoss AS 7! -->
+            <dependency>
+                <groupId>org.jboss.spec</groupId>
+                <artifactId>jboss-javaee-6.0</artifactId>
+                <version>${version.org.jboss.spec.javaee6}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <modules>
         <module>ejb</module>
         <module>web</module>
         <module>ear</module>
     </modules>
+
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>2.3.1</version>
+                    <configuration>
+                        <source>1.6</source>
+                        <target>1.6</target>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 
 </project>
