--- a/test-ear/pom.xml
+++ b/test-ear/pom.xml
@@ -5,7 +5,7 @@
 
     <artifactId>test-ear</artifactId>
     <packaging>jar</packaging>
-    <name>EAR deployment test</name>
+    <name>Arquillian Container Testuite: Tests of EAR deployment</name>
 
     <parent>
         <groupId>org.jboss.arquillian.container.testsuite</groupId>
@@ -31,16 +31,28 @@
             <scope>provided</scope>
             <classifier>classes</classifier>
         </dependency>
+
+        <!-- Test dependencies -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jboss.arquillian.junit</groupId>
+            <artifactId>arquillian-junit-container</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jboss.arquillian.protocol</groupId>
+            <artifactId>arquillian-protocol-servlet</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.9</version>
-            </plugin>
-        </plugins>
     </build>
 
 </project>
