--- a/test-resource/pom.xml
+++ b/test-resource/pom.xml
@@ -5,7 +5,7 @@
 
     <artifactId>test-resource</artifactId>
     <packaging>jar</packaging>
-    <name>Resource test</name>
+    <name>Arquillian Container Testuite: Tests of Resource injections</name>
 
     <parent>
         <groupId>org.jboss.arquillian.container.testsuite</groupId>
@@ -25,16 +25,33 @@
             <scope>provided</scope>
             <classifier>classes</classifier>
         </dependency>
+
+        <!-- Test dependencies -->
+        <dependency>
+            <groupId>org.jboss.spec.javax.annotation</groupId>
+            <artifactId>jboss-annotations-api_1.1_spec</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jboss.arquillian.junit</groupId>
+            <artifactId>arquillian-junit-container</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jboss.arquillian.protocol</groupId>
+            <artifactId>arquillian-protocol-servlet</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.9</version>
-            </plugin>
-        </plugins>
     </build>
 
 </project>
