Fixed @Resource based test

--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <module>package-cdi-war</module>
         <module>package-ejb-war</module>
         <module>package-cdi-ear</module>
+        <module>package-plain-war</module>
     </modules>
 
     <build>
