--- a/test-cdi/pom.xml
+++ b/test-cdi/pom.xml
@@ -11,7 +11,7 @@
 
     <artifactId>test-cdi</artifactId>
     <packaging>jar</packaging>
-    <name>Arquillian Container Testuite: Tests of CDI WAR deployment</name>
+    <name>Arquillian Container Testsuite: Tests of CDI WAR deployment</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
